--- a/views/addrecipe.ejs
+++ b/views/addrecipe.ejs
@@ -30,7 +30,7 @@
                           <input type="email" class="form-control" name="dessertname1" id="DessertName1" >
                         </div>
                         <div class="mb-3">
-                            <label for="Difficult" class="form-label">Difficult select</label>
+                            <label for="Difficult" class="form-label">Difficults select</label>
                             <select class="form-control" name="diffselect" id="exampleFormControlSelect1">
                                 <option>1</option>
                                 <option>2</option>
